<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Enable and disable WiFi-->
    <Button
        android:id="@+id/onoff"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@id/discover"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/discover"
        android:background="@drawable/button_bg"
        android:text="@string/wifi_on_btn_text"
        android:textColor="@color/colorWhite" />

    <!--Discover nearby available peers-->
    <Button
        android:id="@+id/discover"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_below="@id/connectionStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/discover_btn_text"
        android:textColor="@color/colorWhite" />

    <!--Show all available peers in ListView-->
    <ListView
        android:id="@+id/peerListView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/discover"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:background="@android:color/background_light" />

    <!--Show Message-->
    <TextView
        android:id="@+id/readMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/peerListView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="@string/message_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic" />

    <!--Write Message-->
    <EditText
        android:id="@+id/writeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/message_hint"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="95dp"
        android:paddingBottom="10dp" />

    <!--Send Message-->
    <Button
        android:id="@+id/sendButton"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@id/writeMsg"
        android:layout_alignBottom="@id/writeMsg"
        android:background="@drawable/button_bg"
        android:text="@string/send_btn_text"
        android:textColor="@color/colorWhite" />


    <!--Show Connection Status-->
    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/connection_status_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="italic" />

    <!-- private mode and group mode -->
    <ToggleButton
        android:id="@+id/privateGroupbtn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@id/discover"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/discover"
        android:background="@drawable/toggle_button_bg"
        android:text="@string/off_state_text"
        android:textColor="@color/colorWhite"
        android:textOff="@string/off_state_text"
        android:textOn="@string/on_state_code" />

</RelativeLayout>